# temcompanion

./: .pre-commit-config.yaml  CHANGELOG.md  GAUSSIAN_HIGHPASS_IMPLEMENTATION.md  README.md  TemCompanion.py  pyproject.toml  setup.py
TemCompanion/: GPA.py  TemCompanion.py  colormaps.pkl  filters.py
docs/: User Guide.md
scripts/: sync_changelog.py
src/: launcher.py
src/TemCompanion/: DPC.py  GPA.py  UI_elements.py  __init__.py  __main__.py  batch_convert.py  canvas.py  default_config.json  filters.py  functions.py  main.py  stem4d.py
src/TemCompanion/docs/: User Guide.md
