[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TemCompanion"
version = "1.3.0"
description = "A GUI program for TEM data processing and analysis"
authors = [{name = "Tao Ma", email = "matao1984@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    'rosettasciio[all]',
    'pyqt5',
    'pyqtgraph',
    'scikit-image', 
    'scipy', 
    'numpy', 
    'numba', 
    'pillow'
]

[project.scripts]
temcom = "TemCompanion.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"TemCompanion" = [
    "icons/*.png",
    "icons/*.ico", 
    "colormaps.pkl"
]