[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TemCompanion"
version = "1.3.2dev"
description = "A GUI program for TEM data processing and analysis"
authors = [{name = "Tao Ma", email = "matao1984@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8, <3.13"
dependencies = [
    'rosettasciio[all]>=0.10.0',
    'pyqt5>=5.15',
    'pyqtgraph>=0.13.7',
    'scikit-image>=0.25', 
    'scipy>=1.16', 
    'numpy>=2', 
    'numba>=0.62', 
    'pillow>=12',
    'markdown>=3.3'
]

[project.scripts]
temcom = "TemCompanion.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"TemCompanion" = [
    "icons/*.png",
    "icons/*.ico", 
    "colormap.pkl",
    "default_config.json",
    "docs/*.md"
]